--- a/src/style.less
+++ b/src/style.less
@@ -48,5 +48,12 @@ ul {
     }
     .app-right-content{
         flex: auto;
+        display: flex;
+        .editor-content{
+            padding: 10px;
+            width: 100%;
+            height: 100%;
+            outline: none;
+        }
     }
 }
