--- a/src/style.css
+++ b/src/style.css
@@ -28,12 +28,16 @@ ul li {
   height: 100%;
 }
 .app-wrapper .app-left-side {
-  display: flex;
-  justify-content: center;
   width: 100px;
   padding-top: 20px;
   background: #CCC;
   box-shadow: 0 2px 6px silver;
+}
+.app-wrapper .app-left-side .app-left-side-inner {
+  display: flex;
+  justify-content: center;
+  width: 100px;
+  height: 100%;
 }
 .app-wrapper .app-left-side .avatar {
   width: 60px;
@@ -42,11 +46,17 @@ ul li {
 }
 .app-wrapper .app-right-content {
   flex: auto;
-  display: flex;
 }
 .app-wrapper .app-right-content .editor-content {
-  padding: 10px;
+  display: block;
   width: 100%;
+  padding: 10px;
   height: 100%;
   outline: none;
+  text-align: justify;
+  word-wrap: break-word;
+  word-break: break-all;
+  overflow: hidden;
+  border: none;
+  resize: none;
 }
