--- a/src/style.css
+++ b/src/style.css
@@ -34,10 +34,9 @@ ul li {
   box-shadow: 0 2px 6px silver;
 }
 .app-wrapper .app-left-side .app-left-side-inner {
-  display: flex;
-  justify-content: center;
   width: 100px;
   height: 100%;
+  text-align: center;
 }
 .app-wrapper .app-left-side .avatar {
   width: 60px;
