--- a/src/style.less
+++ b/src/style.less
@@ -39,10 +39,9 @@ ul {
         background: #CCC;
         box-shadow: 0 2px 6px silver;
         .app-left-side-inner{
-             display: flex;
-             justify-content: center;
             width: 100px;
             height: 100%;
+            text-align: center;
         }
         .avatar{
             width: 60px;
