--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,10 @@ ul {
 ul li {
   list-style-type: none;
 }
+.app-header {
+  display: flex;
+  justify-content: space-between;
+}
 .app-wrapper {
   display: flex;
   height: 100%;
