--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 .clearfix:before,
 .clearfix:after {
   display: table;
-  content: " ";
+  content: ' ';
 }
 .clearfix:after {
   clear: both;
@@ -23,34 +23,45 @@ ul {
 ul li {
   list-style-type: none;
 }
-.app-header {
+.window-body-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: calc(100%);
+}
+.window-toolbar {
+  position: relative;
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  height: 30px;
+  background: cadetblue;
+  cursor: default;
 }
-.app-wrapper {
+.window-container {
   display: flex;
-  height: 100%;
+  flex: 1;
+  height: calc(100% - 30px);
 }
-.app-wrapper .app-left-side {
+.window-container .app-left-side {
   width: 100px;
   padding-top: 20px;
-  background: #CCC;
+  background: #ccc;
   box-shadow: 0 2px 6px silver;
 }
-.app-wrapper .app-left-side .app-left-side-inner {
+.window-container .app-left-side .app-left-side-inner {
   width: 100px;
   height: 100%;
   text-align: center;
 }
-.app-wrapper .app-left-side .avatar {
+.window-container .app-left-side .avatar {
   width: 60px;
   height: 60px;
   border-radius: 50%;
 }
-.app-wrapper .app-right-content {
+.window-container .app-right-content {
   flex: auto;
 }
-.app-wrapper .app-right-content .editor-content {
+.window-container .app-right-content .editor-content {
   display: block;
   width: 100%;
   padding: 10px;
