--- a/src/style.less
+++ b/src/style.less
@@ -1,72 +1,82 @@
 .clearfix:before,
 .clearfix:after {
-    display: table;
-    content: " ";
+	display: table;
+	content: ' ';
 }
 
 .clearfix:after {
-    clear: both;
+	clear: both;
 }
 
-
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+	margin: 0;
+	padding: 0;
+	height: 100%;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    li {
-        list-style-type: none;
-    }
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	li {
+		list-style-type: none;
+	}
 }
 
-.app-header{
-    display: flex;
-    justify-content: space-between;
+.window-body-wrapper {
+	display: flex;
+	flex-direction: column;
+	height: calc(100%);
+}
+.window-toolbar {
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	height: 30px;
+	background: cadetblue;
+	cursor: default;
 }
 
-.app-wrapper {
-    display: flex;
-    height: 100%;
-    .app-left-side{
-        width: 100px;
-        padding-top: 20px;
-        background: #CCC;
-        box-shadow: 0 2px 6px silver;
-        .app-left-side-inner{
-            width: 100px;
-            height: 100%;
-            text-align: center;
-        }
-        .avatar{
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-        }
-    }
-    .app-right-content{
-        flex: auto;
-        .editor-content{
-            display: block;
-            width: 100%;
-            padding: 10px;
-            height: 100%;
-            outline: none;
-            text-align: justify;
-            word-wrap: break-word;
-            word-break: break-all;
-            overflow: hidden;
-            border: none;
-            resize: none;
-        }
-    }
+.window-container {
+	display: flex;
+	flex: 1;
+	height: calc(100% - 30px);
+	.app-left-side {
+		width: 100px;
+		padding-top: 20px;
+		background: #ccc;
+		box-shadow: 0 2px 6px silver;
+		.app-left-side-inner {
+			width: 100px;
+			height: 100%;
+			text-align: center;
+		}
+		.avatar {
+			width: 60px;
+			height: 60px;
+			border-radius: 50%;
+		}
+	}
+	.app-right-content {
+		flex: auto;
+		.editor-content {
+			display: block;
+			width: 100%;
+			padding: 10px;
+			height: 100%;
+			outline: none;
+			text-align: justify;
+			word-wrap: break-word;
+			word-break: break-all;
+			overflow: hidden;
+			border: none;
+			resize: none;
+		}
+	}
 }
