--- a/src/style.less
+++ b/src/style.less
@@ -62,6 +62,15 @@ ul {
 			height: 60px;
 			border-radius: 50%;
 		}
+		.nav {
+			padding-top: 40px;
+		}
+		.nav-item {
+			padding: 4px 10px;
+			&:hover {
+				background-color: rgb(68, 119, 64);
+			}
+		}
 	}
 	.app-right-content {
 		flex: auto;
