--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,24 @@
 * {
   box-sizing: border-box;
 }
+.scrollbar {
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+.scrollbar:hover {
+  overflow-y: auto;
+}
+.scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+.scrollbar::-webkit-scrollbar {
+  width: 6px;
+  background-color: transparent;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
 html,
 body {
   margin: 0;
@@ -45,7 +63,7 @@ ul li {
 .window-container .app-left-side {
   width: 100px;
   padding-top: 20px;
-  background: #ccc;
+  background: #e5e5e5;
   box-shadow: 0 2px 6px silver;
 }
 .window-container .app-left-side .app-left-side-inner {
@@ -82,4 +100,50 @@ ul li {
   overflow: hidden;
   border: none;
   resize: none;
+}
+.window-controls-tool span {
+  width: 46px;
+  line-height: 30px;
+  display: inline-block;
+  text-align: center;
+  transition: background 0.2s ease-in;
+}
+.window-controls-tool span:hover {
+  background: #e5e5e5;
+}
+.window-controls-tool .window-close:hover {
+  background: #e81123;
+}
+.window-controls-tool .window-close:hover svg {
+  fill: #ffffff;
+  color: #ffffff;
+}
+.titlebar-drag-region {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  -webkit-app-region: drag;
+}
+.window-controls-tool {
+  position: relative;
+  z-index: 1000;
+  -webkit-app-region: no-drag;
+}
+.window-max-restore {
+  display: none;
+}
+.window-max-restore.active {
+  display: inline-block;
+}
+.window-title {
+  width: 35px;
+  position: relative;
+  z-index: 1000;
+  font: 13px/30px sans-serif;
+  text-align: center;
+  -webkit-app-region: drag;
+  user-select: none;
 }
