--- a/src/style.less
+++ b/src/style.less
@@ -87,8 +87,10 @@ ul {
 		}
 		.nav-item {
 			padding: 4px 10px;
+			cursor: default;
 			&:hover {
 				background-color: rgb(68, 119, 64);
+				color: rgba(256, 256, 256, 0.8);
 			}
 		}
 	}
