--- a/src/style.css
+++ b/src/style.css
@@ -55,56 +55,13 @@ ul li {
   justify-content: space-between;
   width: 100%;
   height: 30px;
-  background: cadetblue;
+  background: rgba(12, 136, 79, 0.8);
   cursor: default;
 }
-.window-container {
-  display: flex;
-  flex: 1;
-  height: calc(100% - 30px);
-}
-.window-container .app-left-side {
-  width: 100px;
-  padding-top: 20px;
-  background: #e5e5e5;
-  box-shadow: 0 2px 6px silver;
-}
-.window-container .app-left-side .app-left-side-inner {
-  width: 100px;
-  height: 100%;
-  text-align: center;
-}
-.window-container .app-left-side .avatar {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-}
-.window-container .app-left-side .nav {
-  padding-top: 40px;
-}
-.window-container .app-left-side .nav-item {
-  padding: 4px 10px;
-  cursor: default;
-}
-.window-container .app-left-side .nav-item:hover {
-  background-color: #447740;
-  color: rgba(255, 255, 255, 0.8);
-}
-.window-container .app-right-content {
-  flex: auto;
-}
-.window-container .app-right-content .editor-content {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  height: 100%;
-  outline: none;
-  text-align: justify;
-  word-wrap: break-word;
-  word-break: break-all;
-  overflow: hidden;
-  border: none;
-  resize: none;
+.window-controls-tool {
+  position: relative;
+  z-index: 1000;
+  -webkit-app-region: no-drag;
 }
 .window-controls-tool span {
   width: 46px;
@@ -114,7 +71,10 @@ ul li {
   transition: background 0.2s ease-in;
 }
 .window-controls-tool span:hover {
-  background: #e5e5e5;
+  background: #0c884f;
+}
+.window-controls-tool svg {
+  fill: rgba(255, 255, 255, 0.8);
 }
 .window-controls-tool .window-close:hover {
   background: #e81123;
@@ -138,17 +98,73 @@ ul li {
   display: block;
   -webkit-app-region: drag;
 }
-.window-controls-tool {
-  position: relative;
-  z-index: 1000;
-  -webkit-app-region: no-drag;
-}
 .window-title {
   width: 35px;
   position: relative;
   z-index: 1000;
-  font: 13px/30px sans-serif;
+  font: 14px/30px sans-serif;
   text-align: center;
   -webkit-app-region: drag;
   user-select: none;
+  color: rgba(255, 255, 255, 0.8);
+}
+.window-container {
+  display: flex;
+  flex: 1;
+  height: calc(100% - 30px);
+}
+.window-container .app-left-side {
+  width: 100px;
+  padding-top: 20px;
+  background: #0a7042;
+  box-shadow: 0 2px 6px silver;
+}
+.window-container .app-left-side .app-left-side-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  width: 100px;
+  height: 100%;
+  text-align: center;
+}
+.window-container .app-left-side .title {
+  display: block;
+  width: 100%;
+  font: 13px / 20px status-bar;
+  color: #fff;
+}
+.window-container .app-left-side .avatar {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+.window-container .app-left-side .nav {
+  width: 100%;
+  padding-top: 40px;
+}
+.window-container .app-left-side .nav-item {
+  padding: 4px;
+  cursor: default;
+  color: rgba(255, 255, 255, 0.8);
+}
+.window-container .app-left-side .nav-item:hover {
+  background-color: #0e9f5d;
+  color: #ffffff;
+}
+.window-container .app-right-content {
+  flex: auto;
+}
+.window-container .app-right-content .editor-content {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  height: 100%;
+  outline: none;
+  text-align: justify;
+  word-wrap: break-word;
+  word-break: break-all;
+  overflow: hidden;
+  border: none;
+  resize: none;
 }
