--- a/src/style.less
+++ b/src/style.less
@@ -61,60 +61,16 @@ ul {
 	justify-content: space-between;
 	width: 100%;
 	height: 30px;
-	background: cadetblue;
+	// background: cadetblue;
+	background: rgba(12, 136, 79, 0.8);
 	cursor: default;
 }
 
-.window-container {
-	display: flex;
-	flex: 1;
-	height: calc(100% - 30px);
-	.app-left-side {
-		width: 100px;
-		padding-top: 20px;
-		background: #e5e5e5;
-		box-shadow: 0 2px 6px silver;
-		.app-left-side-inner {
-			width: 100px;
-			height: 100%;
-			text-align: center;
-		}
-		.avatar {
-			width: 60px;
-			height: 60px;
-			border-radius: 50%;
-		}
-		.nav {
-			padding-top: 40px;
-		}
-		.nav-item {
-			padding: 4px 10px;
-			cursor: default;
-			&:hover {
-				background-color: rgb(68, 119, 64);
-				color: rgba(256, 256, 256, 0.8);
-			}
-		}
-	}
-	.app-right-content {
-		flex: auto;
-		.editor-content {
-			display: block;
-			width: 100%;
-			padding: 10px;
-			height: 100%;
-			outline: none;
-			text-align: justify;
-			word-wrap: break-word;
-			word-break: break-all;
-			overflow: hidden;
-			border: none;
-			resize: none;
-		}
-	}
-}
-
 .window-controls-tool {
+	position: relative;
+	z-index: 1000;
+	-webkit-app-region: no-drag;
+
 	span {
 		width: 46px;
 		line-height: 30px;
@@ -122,8 +78,11 @@ ul {
 		text-align: center;
 		transition: background 0.2s ease-in;
 		&:hover {
-			background: #e5e5e5;
+			background: #0c884f;
 		}
+	}
+	svg {
+		fill: rgba(256, 256, 256, 0.8);
 	}
 	.window-close:hover {
 		background: #e81123;
@@ -151,18 +110,75 @@ ul {
 	-webkit-app-region: drag;
 }
 
-.window-controls-tool {
-	position: relative;
-	z-index: 1000;
-	-webkit-app-region: no-drag;
-}
-
 .window-title {
 	width: 35px;
 	position: relative;
 	z-index: 1000;
-	font: 13px/30px sans-serif;
+	font: 14px/30px sans-serif;
 	text-align: center;
 	-webkit-app-region: drag;
 	user-select: none;
+	color: rgba(256, 256, 256, 0.8);
+}
+.window-container {
+	display: flex;
+	flex: 1;
+	height: calc(100% - 30px);
+	.app-left-side {
+		width: 100px;
+		padding-top: 20px;
+		// background: #e5e5e5;
+		background: #0a7042;
+		box-shadow: 0 2px 6px silver;
+		.app-left-side-inner {
+			display: flex;
+			flex-direction: column;
+			justify-content: start;
+			align-items: center;
+			width: 100px;
+			height: 100%;
+			text-align: center;
+		}
+		.title {
+			display: block;
+			width: 100%;
+			font: 13px / 20px status-bar;
+			color: #fff;
+		}
+
+		.avatar {
+			width: 60px;
+			height: 60px;
+			border-radius: 50%;
+		}
+		.nav {
+			width: 100%;
+			padding-top: 40px;
+		}
+		.nav-item {
+			padding: 4px;
+			cursor: default;
+			color: rgba(256, 256, 256, 0.8);
+			&:hover {
+				background-color: #0e9f5d;
+				color: rgba(256, 256, 256, 1);
+			}
+		}
+	}
+	.app-right-content {
+		flex: auto;
+		.editor-content {
+			display: block;
+			width: 100%;
+			padding: 10px;
+			height: 100%;
+			outline: none;
+			text-align: justify;
+			word-wrap: break-word;
+			word-break: break-all;
+			overflow: hidden;
+			border: none;
+			resize: none;
+		}
+	}
 }
