--- a/src/style.less
+++ b/src/style.less
@@ -76,7 +76,7 @@ ul {
 		line-height: 30px;
 		display: inline-block;
 		text-align: center;
-		transition: background 0.2s ease-in;
+		transition: all 0.2s linear;
 		&:hover {
 			background: #0c884f;
 		}
@@ -159,8 +159,9 @@ ul {
 			padding: 4px;
 			cursor: default;
 			color: rgba(256, 256, 256, 0.8);
+			transition: all 0.2s linear;
 			&:hover {
-				background-color: #0e9f5d;
+				background: #0e9f5d;
 				color: rgba(256, 256, 256, 1);
 			}
 		}
