--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
+:root {
+  --color-primary: #0a7042;
+  --color-title-bar: rgba(12, 136, 79, 0.8);
+  --color-control-tool-hover: #0c884f;
+  --color-control-tool-close-hover: #e81123;
+  --color-title-bar-hover-bg: #0e9f5d;
+  --title-bar-height: 30px;
+  --spacing: 10px;
+}
 .clearfix:before,
 .clearfix:after {
   display: table;
@@ -5,6 +14,13 @@
 }
 .clearfix:after {
   clear: both;
+}
+:not(input):not(textarea),
+:not(input):not(textarea)::after,
+:not(input):not(textarea)::before {
+  -webkit-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 * {
   box-sizing: border-box;
@@ -52,14 +68,15 @@ ul li {
 .window-toolbar {
   position: relative;
   display: flex;
-  justify-content: space-between;
   width: 100%;
   height: 30px;
-  background: rgba(12, 136, 79, 0.8);
+  background: var(--color-title-bar);
   cursor: default;
+  -webkit-app-region: drag;
 }
 .window-controls-tool {
   position: relative;
+  margin-left: auto;
   z-index: 1000;
   -webkit-app-region: no-drag;
 }
@@ -71,13 +88,13 @@ ul li {
   transition: all 0.2s linear;
 }
 .window-controls-tool span:hover {
-  background: #0c884f;
+  background: var(--color-control-tool-hover);
 }
 .window-controls-tool svg {
   fill: rgba(255, 255, 255, 0.8);
 }
 .window-controls-tool .window-close:hover {
-  background: #e81123;
+  background: var(--color-control-tool-close-hover);
 }
 .window-controls-tool .window-close:hover svg {
   fill: #ffffff;
@@ -99,13 +116,41 @@ ul li {
   -webkit-app-region: drag;
 }
 .window-title {
-  width: 35px;
   position: relative;
-  z-index: 1000;
+  width: 35px;
+  margin-right: 10px;
   font: 14px/30px sans-serif;
   text-align: center;
+  color: rgba(255, 255, 255, 0.8);
   -webkit-app-region: drag;
   user-select: none;
+  z-index: 1000;
+}
+#app-menu-bar {
+  position: relative;
+  display: flex;
+  -webkit-app-region: no-drag;
+  z-index: 100;
+}
+.toolbar-button {
+  height: 100%;
+}
+.button-component {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  height: 100%;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+.button-component:hover {
+  background-color: var(--color-control-tool-hover);
+  color: black;
+}
+.menu-item span[aria-label] {
+  display: flex;
+  font-size: 12px;
   color: rgba(255, 255, 255, 0.8);
 }
 .window-container {
@@ -116,7 +161,7 @@ ul li {
 .window-container .app-left-side {
   width: 100px;
   padding-top: 20px;
-  background: #0a7042;
+  background: var(--color-primary);
   box-shadow: 0 2px 6px silver;
 }
 .window-container .app-left-side .app-left-side-inner {
@@ -150,7 +195,7 @@ ul li {
   transition: all 0.2s linear;
 }
 .window-container .app-left-side .nav-item:hover {
-  background: #0e9f5d;
+  background: var(--color-control-tool-hover);
   color: #ffffff;
 }
 .window-container .app-right-content {
