--- a/src/style.less
+++ b/src/style.less
@@ -94,7 +94,7 @@ ul {
 		line-height: 30px;
 		display: inline-block;
 		text-align: center;
-		transition: all 0.2s linear;
+		// transition: all 0.2s linear;
 		&:hover {
 			background: var(--color-control-tool-hover);
 		}
