--- a/src/render/style.css
+++ b/src/render/style.css
@@ -177,7 +177,7 @@ ul li {
 .window-container .app-left-side .title {
   display: block;
   width: 100%;
-  font: 13px / 20px status-bar;
+  font: 12px / 20px status-bar;
   color: #fff;
 }
 .window-container .app-left-side .avatar {
@@ -193,7 +193,7 @@ ul li {
   padding: 4px;
   cursor: default;
   color: rgba(255, 255, 255, 0.8);
-  transition: all 0.2s linear;
+  font-size: 14px;
 }
 .window-container .app-left-side .nav-item:hover {
   background: var(--color-control-tool-hover);
