--- a/src/render/style.less
+++ b/src/render/style.less
@@ -195,7 +195,7 @@ ul {
     .title {
       display: block;
       width: 100%;
-      font: 13px / 20px status-bar;
+      font: 12px / 20px status-bar;
       color: #fff;
     }
 
@@ -212,7 +212,7 @@ ul {
       padding: 4px;
       cursor: default;
       color: rgba(256, 256, 256, 0.8);
-      transition: all 0.2s linear;
+      font-size: 14px;
       &:hover {
         background: var(--color-control-tool-hover);
         color: rgba(256, 256, 256, 1);
