--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -141,7 +141,7 @@ ul {
   z-index: 1000;
 }
 
-#app-menu-bar {
+.app-menu-bar {
   position: relative;
   display: flex;
   -webkit-app-region: no-drag;
