--- a/render/src/styles/style.css
+++ b/render/src/styles/style.css
@@ -127,7 +127,7 @@ ul li {
   user-select: none;
   z-index: 1000;
 }
-#app-menu-bar {
+.app-menu-bar {
   position: relative;
   display: flex;
   -webkit-app-region: no-drag;
