--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -80,7 +80,7 @@ ul {
 	width: 100%;
 	height: 30px;
 	// background: cadetblue;
-	background: var(--color-title-bar);
+	background: var(--color-primary);
 	cursor: default;
 	-webkit-app-region: drag;
 }
@@ -133,8 +133,8 @@ ul {
 
 .window-title {
 	position: relative;
-	width: 35px;
-	margin-right: 10px;
+	width: 36px;
+	margin: 0 10px;
 	font: 14px/30px sans-serif;
 	text-align: center;
 	color: rgba(256, 256, 256, 0.8);
@@ -185,6 +185,7 @@ ul {
 		// background: #e5e5e5;
 		background: var(--color-primary);
 		box-shadow: 0 2px 6px silver;
+		border-top: 1px solid green;
 		.app-left-side-inner {
 			display: flex;
 			flex-direction: column;
