--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -259,6 +259,7 @@ ul {
 .app-left-setting {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	margin-top: auto;
 	width: 100%;
 	padding-bottom: 10px;
