--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -1,3 +1,7 @@
+@import 'antd/dist/antd.less'; // 可以在 .babelrc 里设置
+
+// @primary-color: #0a7042;
+
 :root {
 	--color-primary: #0a7042;
 	--color-title-bar: rgba(12, 136, 79, 1);
