--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -143,7 +143,7 @@ ul {
 	font: 14px/30px sans-serif;
 	text-align: center;
 	color: rgba(256, 256, 256, 0.8);
-	-webkit-app-region: drag;
+	-webkit-app-region: no-drag;
 	user-select: none;
 	z-index: 1000;
 }
