--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -1,4 +1,4 @@
-@import 'antd/dist/antd.less'; // 可以在 .babelrc 里设置
+// @import 'antd/dist/antd.less'; // 可以在 .babelrc 里设置
 
 // @primary-color: #0a7042;
 
