--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -230,6 +230,7 @@ ul {
 	.app-right-content {
 		flex: auto;
 		padding: 10px;
+		background-color: #f3f5f7;
 		.editor-content {
 			display: block;
 			width: 100%;
