--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -36,10 +36,7 @@ a {
 }
 .scrollbar {
 	overflow-x: hidden;
-	overflow-y: hidden;
-	&:hover {
-		overflow-y: auto;
-	}
+	overflow-y: auto;
 	&::-webkit-scrollbar-track {
 		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 		background-color: transparent;
@@ -50,7 +47,9 @@ a {
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background-color: #000000;
+		border-radius: 6px;
+		background-color: #fff;
+		background-image: -webkit-gradient(linear, 40% 0%, 75% 84%, from(#4d9c41), to(#19911d), color-stop(0.6, #54de5d));
 	}
 }
 
@@ -117,13 +116,6 @@ ul {
 		fill: #ffffff;
 		color: #ffffff;
 	}
-	// .window-max-restore {
-	// 	display: none;
-	// }
-
-	// .window-max-restore.active {
-	// 	display: inline-block;
-	// }
 }
 
 .titlebar-drag-region {
@@ -152,23 +144,6 @@ ul {
 	display: flex;
 	-webkit-app-region: no-drag;
 	z-index: 100;
-}
-.toolbar-button {
-	height: 100%;
-}
-
-.button-component {
-	display: flex;
-	align-items: center;
-	flex-direction: row;
-	height: 100%;
-	border: none;
-	outline: none;
-	background-color: transparent;
-	&:hover {
-		background-color: var(--color-control-tool-hover);
-		color: black;
-	}
 }
 
 .window-container {
@@ -203,6 +178,26 @@ ul {
 			height: 60px;
 			border-radius: 50%;
 		}
+
+		.app-left-setting {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin-top: auto;
+			width: 100%;
+			padding-bottom: 10px;
+			color: #fff;
+			font-size: 14px;
+
+			.i-icon {
+				display: inline-flex;
+				position: relative;
+				transition: all linear 0.4s;
+			}
+			&:hover .i-icon {
+				transform: rotate(90deg);
+			}
+		}
 		.nav {
 			width: 100%;
 			padding-top: 40px;
@@ -221,57 +216,13 @@ ul {
 	.app-right-content {
 		flex: auto;
 		padding: 10px;
+		height: calc(100%);
+		overflow-y: auto;
+		overflow-x: hidden;
 		background-color: #f3f5f7;
-		.editor-content {
-			display: block;
-			width: 100%;
-			padding: 10px;
-			height: 100%;
-			outline: none;
-			text-align: justify;
-			word-wrap: break-word;
-			word-break: break-all;
-			overflow: hidden;
-			border: none;
-			resize: none;
-		}
 	}
 }
 
-.linkBack {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 50px;
-	background: var(--color-primary);
-	-webkit-app-region: no-drag;
-	&:hover {
-		background-color: var(--color-control-tool-hover);
-	}
-	.i-icon {
-		display: flex;
-	}
-}
-
-.app-left-setting {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-top: auto;
-	width: 100%;
-	padding-bottom: 10px;
-	color: #fff;
-	font-size: 14px;
-
-	.i-icon {
-		display: inline-flex;
-		position: relative;
-		transition: all linear 0.4s;
-	}
-	&:hover .i-icon {
-		transform: rotate(90deg);
-	}
-}
 .ant-menu-light.ant-menu .ant-menu-item-selected {
 	border-right: 3px solid #fa541c;
 }
