--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -138,6 +138,20 @@ ul {
 	user-select: none;
 	z-index: 1000;
 }
+.linkBack {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 50px;
+	background: var(--color-primary);
+	-webkit-app-region: no-drag;
+	&:hover {
+		background-color: var(--color-control-tool-hover);
+	}
+	.i-icon {
+		display: flex;
+	}
+}
 
 #app-menu-bar {
 	position: relative;
