--- a/render/src/components/link/style.less
+++ b/render/src/components/link/style.less
@@ -1,8 +1,10 @@
 .link-card {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 14px;
 }
 .link-card-item {
+	flex: none;
 	position: relative;
 	display: inline-flex;
 	flex-direction: row;
