--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -1,7 +1,3 @@
-// @import 'antd/dist/antd.less'; // 可以在 .babelrc 里设置
-
-// @primary-color: #0a7042;
-
 :root {
 	--color-primary: #0a7042;
 	--color-title-bar: rgba(12, 136, 79, 1);
@@ -21,13 +17,7 @@
 .clearfix:after {
 	clear: both;
 }
-:not(input):not(textarea),
-:not(input):not(textarea)::after,
-:not(input):not(textarea)::before {
-	-webkit-user-select: none;
-	user-select: none;
-	// cursor: default;
-}
+
 * {
 	box-sizing: border-box;
 }
@@ -234,6 +224,7 @@ ul {
 		overflow-y: auto;
 		overflow-x: hidden;
 		background-color: #f3f5f7;
+		user-select: auto;
 	}
 }
 
