--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -231,3 +231,9 @@ ul {
 .ant-menu-light.ant-menu .ant-menu-item-selected {
 	border-right: 3px solid #fa541c;
 }
+
+.fileurl{
+	display: flex;
+	align-items: center;
+	line-height: 40px;
+}
