--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -155,6 +155,7 @@ ul {
 	flex: 1;
 	height: calc(100% - var(--title-bar-height));
 	.app-left-side {
+		flex: none;
 		width: 100px;
 		padding-top: 20px;
 		// background: #e5e5e5;
@@ -232,7 +233,7 @@ ul {
 	border-right: 3px solid #fa541c;
 }
 
-.fileurl{
+.fileurl {
 	display: flex;
 	align-items: center;
 	line-height: 40px;
