--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -86,6 +86,7 @@ ul {
 	-webkit-app-region: no-drag;
 	display: flex;
 	flex-wrap: nowrap;
+	user-select: none;
 	span {
 		width: 46px;
 		line-height: var(--title-bar-height);
