--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -194,7 +194,7 @@ ul {
 			padding-bottom: 10px;
 			color: #fff;
 			font-size: 14px;
-			cursor: default;
+			cursor: pointer;
 
 			.i-icon {
 				display: inline-flex;
