--- a/render/src/components/link/style.less
+++ b/render/src/components/link/style.less
@@ -13,11 +13,12 @@
 	height: 66px;
 	padding: 10px 16px;
 	cursor: pointer;
-	box-shadow: 0 0 2px rgb(0 0 0 / 30%);
+	box-shadow: 0 0 4px rgb(0 0 0 / 13%);
 	border-radius: 2px;
 	background-color: #fff;
 	box-sizing: border-box;
 	transition: all 0.2s ease-in-out;
+	border: 1px solid #f4f3f4;
 	&:hover {
 		transform: scale(0.945);
 		box-shadow: 0 0 2px rgb(0 0 10px / 45.2%);
