--- a/render/src/styles/style.less
+++ b/render/src/styles/style.less
@@ -157,6 +157,7 @@ ul {
 	flex: 1;
 	height: calc(100% - var(--title-bar-height));
 	overflow: hidden;
+	background-color: #f5f7fa;
 	.app-left-side {
 		flex: none;
 		width: 100px;
@@ -227,13 +228,13 @@ ul {
 		flex: auto;
 		padding: 10px;
 		height: calc(100%);
-		background-color: #F5F7FA;
-		user-select: auto;
-    overflow-x: hidden;
-	}
-	.app-right-main{
 		background-color: #fff;
-		overflow-y: auto;
+		user-select: auto;
+		overflow-x: hidden;
+	}
+	.app-right-main {
+		background-color: #fff;
+		// overflow-y: auto;
 	}
 }
 
