--- a/src/render/styles/style.less
+++ b/src/render/styles/style.less
@@ -161,6 +161,7 @@ ul {
 	.app-left-side {
 		flex: none;
 		width: 100px;
+		height: 100%;
 		padding-top: 20px;
 		// background: #e5e5e5;
 		background: var(--color-primary);
