--- a/src/render/styles/style.less
+++ b/src/render/styles/style.less
@@ -227,15 +227,14 @@ ul {
 	.app-right-content {
 		position: relative;
 		flex: auto;
-		padding: 10px;
 		height: calc(100%);
-		background-color: #fff;
 		user-select: auto;
+		overflow-y: auto;
 		overflow-x: hidden;
 	}
 	.app-right-main {
 		background-color: #fff;
-		// overflow-y: auto;
+		margin: 10px;
 	}
 }
 
