--- a/src/render/src/components/file/style.less
+++ b/src/render/src/components/file/style.less
@@ -13,14 +13,15 @@
 	height: 50px;
 	padding: 8px 6px;
 	cursor: pointer;
-	box-shadow: 0 0 2px rgb(0 0 0 / 30%);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
+	border: 1px solid #f1eef1;
 	border-radius: 2px;
 	background-color: #fff;
 	box-sizing: border-box;
 	transition: all 0.2s ease-in-out;
 	&:hover {
 		transform: scale(0.945);
-		box-shadow: 0 0 2px rgb(0 0 10px / 45.2%);
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
 	}
 	.file-img {
 		display: flex;
