--- a/src/render/src/components/link/style.less
+++ b/src/render/src/components/link/style.less
@@ -13,7 +13,7 @@
 	height: 66px;
 	padding: 10px 16px;
 	cursor: pointer;
-	box-shadow: 0 0 4px rgb(0 0 0 / 13%);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
 	border-radius: 2px;
 	background-color: #fff;
 	box-sizing: border-box;
@@ -21,7 +21,7 @@
 	border: 1px solid #f4f3f4;
 	&:hover {
 		transform: scale(0.945);
-		box-shadow: 0 0 2px rgb(0 0 10px / 45.2%);
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
 	}
 	.link-card-img {
 		display: flex;
