--- a/src/render/src/styles/style.less
+++ b/src/render/src/styles/style.less
@@ -162,7 +162,7 @@ ul {
 		flex: none;
 		width: 100px;
 		padding-top: 20px;
-		// background: #e5e5e5;
+		user-select: none;
 		background: var(--color-primary);
 		box-shadow: 0 2px 6px silver;
 		border-top: 1px solid green;
