--- a/src/render/styles/style.less
+++ b/src/render/styles/style.less
@@ -24,20 +24,22 @@
 a {
 	outline: none;
 }
+.ant-table-content,
 .scrollbar {
+	--width: 10px;
 	overflow: auto;
 	&::-webkit-scrollbar-track {
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		box-shadow: inset 0 0 var(--width) rgba(0, 0, 0, 0.3);
 		background-color: transparent;
 	}
 	&::-webkit-scrollbar {
-		width: 6px;
-		height: 6px;
+		width: var(--width);
+		height: var(--width);
 		background-color: transparent;
 	}
 
 	&::-webkit-scrollbar-thumb {
-		border-radius: 6px;
+		border-radius: var(--width);
 		background-color: #fff;
 		background-image: -webkit-gradient(linear, 40% 0%, 75% 84%, from(#4d9c41), to(#19911d), color-stop(0.6, #54de5d));
 	}
@@ -51,14 +53,6 @@ body {
 	overflow-x: hidden;
 }
 
-ul {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	li {
-		list-style-type: none;
-	}
-}
 #root {
 	height: calc(100%);
 	overflow: hidden;
@@ -108,16 +102,6 @@ ul {
 		fill: #ffffff;
 		color: #ffffff;
 	}
-}
-
-.titlebar-drag-region {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: block;
-	-webkit-app-region: drag;
 }
 
 .window-title {
@@ -233,12 +217,7 @@ ul {
 	}
 	.app-right-main {
 		background-color: #fff;
-		// overflow-y: auto;
 	}
-}
-
-.ant-menu-light.ant-menu .ant-menu-item-selected {
-	border-right: 3px solid #fa541c;
 }
 
 .fileurl {
