--- a/src/render/styles/style.less
+++ b/src/render/styles/style.less
@@ -27,7 +27,7 @@ a {
 .ant-table-body,
 .scrollbar {
 	--width: 10px;
-	overflow: auto;
+	overflow: auto !important;
 	&::-webkit-scrollbar-track {
 		box-shadow: inset 0 0 var(--width) rgba(0, 0, 0, 0.3);
 		background-color: transparent;
