--- a/src/render/views/wallpaper/styles.less
+++ b/src/render/views/wallpaper/styles.less
@@ -9,8 +9,9 @@
 		cursor: pointer;
 		width: 40px;
 		height: 40px;
+		animation-fill-mode: forwards;
     &.loading{
-      animation: 1s linear 0s infinite alternate turn;
+      animation: 1s linear 0s infinite turn;
     }
 	}
 	span {
