--- a/src/render/views/wallpaper/styles.less
+++ b/src/render/views/wallpaper/styles.less
@@ -9,9 +9,14 @@
 		cursor: pointer;
 		width: 40px;
 		height: 40px;
+		animation: turn 1s linear infinite;
+		// animation-duration: 1s;
+		// animation-timing-function: linear;
+		// animation-iteration-count: infinite;
 		animation-fill-mode: forwards;
+		animation-play-state: paused;
     &.loading{
-      animation: 1s linear 0s infinite turn;
+      animation-play-state: running;
     }
 	}
 	span {
