--- a/src/render/components/loading/style.less
+++ b/src/render/components/loading/style.less
@@ -11,14 +11,14 @@
 	background: #fff;
 	z-index: 100;
 
-	.app-loading__logo {
+	.app-loading-logo {
 		margin-bottom: 30px;
 	}
-	.app-loading__logo img {
+	.app-loading-logo img {
 		width: 90px;
 		vertical-align: bottom;
 	}
-	.app-loading__title {
+	.app-loading-title {
 		font-size: 24px;
 		color: #333;
 		margin-top: 30px;
