--- a/src/render/views/oss/item.less
+++ b/src/render/views/oss/item.less
@@ -10,6 +10,7 @@
 	display: inline-flex;
 	flex-direction: row;
 	align-items: center;
+	gap: 6px;
 	width: 200px;
 	height: 50px;
 	padding: 8px 6px;
@@ -35,11 +36,16 @@
 			line-height: 1.4rem;
 			margin: 0;
 			color: #333;
-			font-size: 14px;
+			font-size: 16px;
 			font-weight: 600;
 			overflow: hidden;
 			white-space: nowrap;
 			text-overflow: ellipsis;
 		}
+	}
+	.bucket-region {
+		margin-top: 2px;
+		font-size: 12px;
+		color: #979798;
 	}
 }
